Added more descriptions.

--- a/index.html
+++ b/index.html
@@ -485,27 +485,40 @@
                 </div>                 
                 <div class="container"> 
                     <div class="row"> 
-                        <div class="col-lg-8 col-lg-offset-2"> 
-                            <div class="modal-body"> 
+                        <div class="col-lg-8 col-lg-offset-2">
+                            <div class="modal-body">
                                 <h2>Truck Driver</h2> 
                                 <br> 
                                 <div class="embed-responsive embed-responsive-16by9"> 
                                     <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/MEJwZjJ5z6w?rel=0"></iframe>                                     
                                 </div>                                 
                                 <br> 
-                                <p>DESCRIPTION COMMING SOON...</p> 
+                                <p>Truck Driver is a trucking simulator for all major consoles. During this project I was responsible for nearly all gameplay related features, including:</p> 
+                                <ul class="lead text-left"> 
+                                    <li>Behaviour of the truck and trailers.</li>                                     
+                                    <li>Mission system.
+                                        <br>
+                                    </li>                                     
+                                    <li>Garage, where you can customize your truck with items that are unlocked by completing missions.</li>
+                                    <li>Trailer parking mechanic.</li>
+                                    <li>Zones where the player can rest or refuel their truck.</li>
+                                    <li>Implementing steering wheel support for the Playstation 4 and Xbox One.</li>
+                                </ul>
+                                <p style="text-align: left;"><span style="font-size: 21px;">I also assisted with creating builds for all platforms.</span></p>
                                 <ul class="list-inline item-details"> 
                                     <li>Language:
-                                        <strong>C#</strong> 
+                                        <strong>C#, C++</strong> 
                                     </li>                                     
                                     <li>Download:
-                                        <strong> <a href="https://store.playstation.com/nl-nl/product/EP4675-CUSA10858_00-CLUSTERTUMBLE0EU" target="_blank">Playstation Store</a> </strong> 
+                                        <strong> <a href="https://store.playstation.com/nl-nl/product/EP4541-CUSA12209_00-TRUCKDRIVEREU000" target="_blank">Playstation Store,</a> </strong> 
+                                        <strong> <a href="https://www.microsoft.com/en-us/p/truck-driver/c2hqvxvvlmkg" target="_blank">Xbox,</a> </strong> 
+                                        <strong> <a href="https://store.steampowered.com/app/768180/Truck_Driver/" target="_blank">Steam</a> </strong>
                                     </li>                                     
                                 </ul>                                 
                                 <button type="button" class="btn btn-default" data-dismiss="modal"> 
                                     <i class="fa fa-times"></i>Close
-                                </button>                                 
-                            </div>                             
+                                </button>
+                            </div>
                         </div>                         
                     </div>                     
                 </div>                 
@@ -528,7 +541,7 @@
                                     <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/roFYcNGjf54?rel=0"></iframe>                                     
                                 </div>                                 
                                 <br> 
-                                <p>DESCRIPTION COMMING SOON...</p> 
+                                <p>Cluster Tumble is a puzzle game with local multiplayer for the Playstation 4.&nbsp; Which I&apos;ve made on my own for a UK based client.</p> 
                                 <ul class="list-inline item-details"> 
                                     <li>Language:
                                         <strong>C#</strong> 
@@ -556,49 +569,58 @@
                 <div class="container"> 
                     <div class="row"> 
                         <div class="col-lg-8 col-lg-offset-2"> 
-                            <div class="modal-body"> 
+                            <div class="modal-body">
                                 <h2>Real Farm DLC</h2> 
                                 <br> 
                                 <div class="embed-responsive embed-responsive-16by9"> 
                                     <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/4pD-P3aaK9o?rel=0"></iframe>                                     
                                 </div>                                 
                                 <br> 
-                                <p>DESCRIPTION COMMING SOON...</p> 
+                                <p>After the release of Real Farm, two more DLCs were released. These DLC packs included a new map, new types of crops and several new vehicles. It was my responsibility to assist the artists with implementing this new content.</p> 
                                 <ul class="list-inline item-details"> 
                                     <li>Language:
                                         <strong>C#</strong> 
                                     </li>                                     
                                     <li>Download:
-                                        <strong> <a href="https://store.playstation.com/nl-nl/grid/search-game/1?gameContentType=addons&query=real%20farm" target="_blank">Playstation Store</a> </strong> 
+                                        <strong> <a href="https://store.playstation.com/nl-nl/product/EP4541-CUSA07966_00-REALFARMDLC101EU" target="_blank">Playstation Store</a> </strong> 
                                     </li>                                     
                                 </ul>                                 
                                 <button type="button" class="btn btn-default" data-dismiss="modal"> 
                                     <i class="fa fa-times"></i>Close
-                                </button>                                 
+                                </button>
                             </div>                             
                         </div>                         
                     </div>                     
                 </div>                 
             </div>             
-        </div>         
+        </div>
+        <div class="modal-backdrop fade in"></div>         
         <div class="portfolio-modal modal fade" id="realfarm" tabindex="-1" role="dialog" aria-hidden="true"> 
             <div class="modal-content"> 
                 <div class="close-modal" data-dismiss="modal"> 
                     <div class="lr"> 
                         <div class="rl"></div>                         
                     </div>                     
+                    <div class="modal-backdrop fade in"></div>
                 </div>                 
                 <div class="container"> 
                     <div class="row"> 
                         <div class="col-lg-8 col-lg-offset-2"> 
-                            <div class="modal-body"> 
+                            <div class="modal-body">
                                 <h2>Real Farm</h2> 
                                 <br> 
                                 <div class="embed-responsive embed-responsive-16by9"> 
                                     <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/CEKyPMXbKyQ?rel=0"></iframe>                                     
                                 </div>                                 
                                 <br> 
-                                <p>DESCRIPTION COMMING SOON...</p> 
+                                <p>Real Farm&nbsp; is a game that I worked on during my internship at Triangle Studios. Components that I created for this game include:</p> 
+                                <ul class="lead text-left"> 
+                                    <li>Economic simulation of a stock market.</li>                                     
+                                    <li>Weather simulation.</li>                                     
+                                    <li>Traffic simulation.</li>                                     
+                                    <li>World- and minimap.</li>
+                                </ul>
+                                <p style="text-align: left;">I also assisted another programmer with creating builds for the Playstation 4.<br>After the release of the game I was made responsible for delivering a new patch each week with several bug fixes.</p> 
                                 <ul class="list-inline item-details"> 
                                     <li>Language:
                                         <strong>C#</strong> 
@@ -611,7 +633,7 @@
                                 </ul>                                 
                                 <button type="button" class="btn btn-default" data-dismiss="modal"> 
                                     <i class="fa fa-times"></i>Close
-                                </button>                                 
+                                </button>
                             </div>                             
                         </div>                         
                     </div>                     
@@ -696,9 +718,9 @@
                                 <a class="left carousel-control" href="#bluevsredCarousel" role="button" data-slide="prev"> <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span> <span class="sr-only">Previous</span> </a> 
                                 <a class="right carousel-control" href="#bluevsredCarousel" role="button" data-slide="next"> <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span> <span class="sr-only">Next</span> </a> 
                             </div>                             
-                            <p>During my minor at the NHL Hogeschool I created a one lane MOBA in Unity
+                            <p>During my minor at the NHL Hogeschool I created a MOBA cosisting of one single lane. I did this in Unity
                         together with two other students who had never worked with Unity before.
-                        The things that I created include: </p> 
+                        The things that I created include:</p> 
                             <ul class="lead text-left"> 
                                 <li>All 3D-models (besides the tower and the keep).</li>                                 
                                 <li>Everything that had to do with online multiplayer including a server written
