--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                             <a href="#portfolio">Portfolio</a> 
                         </li>                         
                         <li class="page-scroll"> 
-                            <a href="#experience">Experience</a> 
+                            <a href="#experience" class="hidden">Experience</a> 
                         </li>                         
                         <li class="page-scroll"> 
                             <a href="#contact">Contact</a> 
@@ -70,7 +70,7 @@
                     <div class="col-lg-12"> 
                         <div class="intro-text"> 
                             <span class="name">Jeroen van der Meulen</span> 
-                            <span class="skills">Programmer</span> 
+                            <span class="skills">Developer</span> 
                         </div>                         
                     </div>                     
                     <div> 
@@ -78,7 +78,7 @@
                             <p><br>Hello there!</p> 
                         </div>                         
                         <div class="col-lg-4 col-lg-offset-4 text-center"> 
-                            <p>My name is Jeroen van der Meulen and I'm currently working as a Programmer at Triangle Studios in Leeuwarden, the Netherlands.</p> 
+                            <p>My name is Jeroen van der Meulen and I'm currently working as a Developer at Triangle Studios in Leeuwarden, the Netherlands.</p> 
                             <a href="https://www.linkedin.com/in/jeroen-van-der-meulen-107847a1" target="_blank" class="btn btn-outline fa-4x"><i class="fa fa-fw fa-linkedin"></i></a> 
                         </div>                         
                     </div>                     
@@ -108,6 +108,17 @@
                         <div class="portfolio-caption"> 
                             <h4>Slide Stars</h4> 
                             <p class="text-muted">Platform adventure for Playstation 4, Xbox One and Nintendo Switch.</p> 
+                        </div>                         
+                    </div>
+                    <div class="col-sm-4 portfolio-item"> 
+                        <a href="#fruitfriends" class="portfolio-link" data-toggle="modal"> <div class="caption img-responsive text-nowrap"> 
+                                <div class="caption-content"> 
+                                    <i class="fa fa-search-plus fa-3x"></i> 
+                                </div>                                 
+                            </div> <img src="img/portfolio/fruitfriends/fruitfriends.jpg" class="img-responsive crop img-centered" alt=""> </a> 
+                        <div class="portfolio-caption"> 
+                            <h4>Fruit Friends</h4> 
+                            <p class="text-muted">Educational minigames for iOS and Android.</p> 
                         </div>                         
                     </div>                     
                     <div class="col-sm-4 portfolio-item"> 
@@ -279,7 +290,7 @@
             </div>             
         </section>         
         <!-- Experience Section -->         
-        <section class="success" id="experience"> 
+        <section class="hidden success" id="experience"> 
             <div class="container"> 
                 <div class="row"> 
                     <div class="col-lg-12 text-center"> 
@@ -370,6 +381,45 @@
         <div class="portfolio-modal modal fade" id="slidestars" tabindex="-1" role="dialog" aria-hidden="true"> 
             <div class="modal-content"> 
                 <div class="close-modal" data-dismiss="modal">
+                    <div class="modal-backdrop fade in"></div>                     
+                    <div class="lr"> 
+                        <div class="rl"></div>                         
+                    </div>                     
+                    <div class="modal-backdrop fade in"></div>
+                    <div class="modal-backdrop fade in"></div>
+                </div>                 
+                <div class="container"> 
+                    <div class="row"> 
+                        <div class="col-lg-8 col-lg-offset-2"> 
+                            <div class="modal-body"> 
+                                <h2>Slide Stars</h2> 
+                                <br> 
+                                <div class="embed-responsive embed-responsive-16by9"> 
+                                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/pYbab0VJEI4"></iframe>                                     
+                                </div>                                 
+                                <br> 
+                                <p>DESCRIPTION COMMING SOON...</p> 
+                                <ul class="list-inline item-details"> 
+                                    <li>Language:
+                                        <strong>C#</strong> 
+                                    </li>                                     
+                                    <li>Download:
+                                        <strong> <a href="https://store.playstation.com/nl-nl/product/EP4675-CUSA10858_00-CLUSTERTUMBLE0EU" target="_blank">Playstation Store</a> </strong> 
+                                    </li>                                     
+                                </ul>                                 
+                                <button type="button" class="btn btn-default" data-dismiss="modal"> 
+                                    <i class="fa fa-times"></i>Close
+                                </button>                                 
+                            </div>                             
+                        </div>                         
+                    </div>                     
+                </div>                 
+            </div>             
+        </div>
+        <div class="portfolio-modal modal fade" id="fruitfriends" tabindex="-1" role="dialog" aria-hidden="true"> 
+            <div class="modal-content"> 
+                <div class="close-modal" data-dismiss="modal">
+                    <div class="modal-backdrop fade in"></div>
                     <div class="modal-backdrop fade in"></div>                     
                     <div class="lr"> 
                         <div class="rl"></div>                         
